remove unneeded if check. Fixed styling so edit button options are visible when clicked even when accordion is shrunk. Changed update service call to just update recoil state instead of calling onAfterLogin

--- a/src/pages/bookingFlowCheckoutPage/bookingCartTotalsCard/BookingCartTotalsCard.scss
+++ b/src/pages/bookingFlowCheckoutPage/bookingCartTotalsCard/BookingCartTotalsCard.scss
@@ -2,6 +2,7 @@
 
 .rsBookingCartTotalsCard {
 	background: theme-var($primaryBackgroundColor);
+	overflow: visible;
 
 	.articleItemHeader {
 		padding: 0;
@@ -21,6 +22,7 @@
 
 	.whiteBox {
 		display: flex;
+		z-index: 2;
 		justify-content: center;
 		align-items: flex-start;
 		flex-direction: column;
